--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URL=mongodb+srv://warlock:sangrurmongo@warlocks.wpz6s.mongodb.net/Master_Database
+DB_URL=mongodb+srv://<username>:<password>@warlocks.wpz6s.mongodb.net/Master_Database
 DB_COLLECTION_1=userinfo
